--- a/app/iscrizioni.html
+++ b/app/iscrizioni.html
@@ -389,7 +389,7 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse408" class="collapse show" aria-labelledby="heading408" data-parent="#accordionExample">
+                                <div id="collapse408" class="collapse" aria-labelledby="heading408" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
@@ -476,13 +476,14 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse1808" class="collapse" aria-labelledby="heading1808" data-parent="#accordionExample">
+                                <div id="collapse1808" class="collapse show" aria-labelledby="heading1808" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
                                                 <thead>
                                                     <tr>
                                                         <th scope="col">#</th>
+                                                        <th scope="col">Punti</th>
                                                         <th scope="col">Nome Squadra</th>
                                                         <th scope="col">1</th>
                                                         <th scope="col">2</th>
@@ -490,7 +491,118 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-
+                                                    <tr>
+                                                      <th scope="row">1</th>
+                                                      <td>172</td>
+                                                      <td>Mojitos</td>
+                                                      <td>Filippo Rontini</td>
+                                                      <td>Filippo Sampaoli</td>
+                                                      <td>Matteo Pirazzoli</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">2</th>
+                                                      <td>164</td>
+                                                      <td>Romin lo dici a tua sorella</td>
+                                                      <td>Lorenzo Grottoli</td>
+                                                      <td>Riccardo Cardia</td>
+                                                      <td>Matteo Aldini</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">3</th>
+                                                      <td>119</td>
+                                                      <td>Stai su</td>
+                                                      <td>Patrick Bandini</td>
+                                                      <td>Lorenzo Tommasini</td>
+                                                      <td>Matteo Camerani</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">4</th>
+                                                      <td>89</td>
+                                                      <td>ITIoti 3.0</td>
+                                                      <td>Matteo Bologna</td>
+                                                      <td>Stefano Marchini</td>
+                                                      <td>Giovanni Natali</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">5</th>
+                                                      <td>62</td>
+                                                      <td>1 litro a partita</td>
+                                                      <td>Patrick Martini</td>
+                                                      <td>Massimo Piadelli</td>
+                                                      <td>Marco Sangiorgi</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">6</th>
+                                                      <td>60</td>
+                                                      <td>Fede Team</td>
+                                                      <td>Federico Errani</td>
+                                                      <td>Stefano Rambelli</td>
+                                                      <td>Luca Mincione</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">7</th>
+                                                      <td>56</td>
+                                                      <td>600g di orsetti</td>
+                                                      <td>Dario Bezzi</td>
+                                                      <td>Lorenzo Anconelli</td>
+                                                      <td>Samuele Taglioli</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">8</th>
+                                                      <td>55</td>
+                                                      <td>#schifo</td>
+                                                      <td>Alessandro Cardia</td>
+                                                      <td>Gianluca Battara</td>
+                                                      <td>Andrea Cerquetti</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">9</th>
+                                                      <td>25</td>
+                                                      <td>Pollino Federico Official</td>
+                                                      <td>Luca Venturini</td>
+                                                      <td>Federico Pollino</td>
+                                                      <td>Eleonora Bombardi</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">10</th>
+                                                      <td>16</td>
+                                                      <td>GioGiaGio</td>
+                                                      <td>Giorgio Santoni</td>
+                                                      <td>Giovanni Santoni</td>
+                                                      <td>Giacomo Santoni</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">11</th>
+                                                      <td>8</td>
+                                                      <td>Il salame ce lo portiamo da casa</td>
+                                                      <td>Marco Focaccia</td>
+                                                      <td>Edoardo Larovere</td>
+                                                      <td>Luca Babini</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">12</th>
+                                                      <td>4</td>
+                                                      <td>Last but not least</td>
+                                                      <td>Fabio Garavini</td>
+                                                      <td>Virginio Minguzzi</td>
+                                                      <td>Giulia Petroncini</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">13</th>
+                                                      <td>0</td>
+                                                      <td>Bucow</td>
+                                                      <td>Massimiliano Mazza</td>
+                                                      <td>Luca Soli</td>
+                                                      <td>Luca Paoloni</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">14</th>
+                                                      <td>0</td>
+                                                      <td>Invecchiamo ma non molliamo</td>
+                                                      <td>Matteo Martoni</td>
+                                                      <td>Stefano Lega</td>
+                                                      <td>Christian Mazzavillani</td>
+                                                    </tr>
                                                 </tbody>
                                             </table>
                                         </div>
@@ -654,7 +766,34 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-
+                                                    <tr>
+                                                      <th scope="row">1</th>
+                                                      <td>La più in forma è la MILF</td>
+                                                      <td>Federica Bandini</td>
+                                                      <td>Silvia Battara</td>
+                                                      <td>Giulia Biondi</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">2</th>
+                                                      <td>Non so cosa dire</td>
+                                                      <td>Eugenia Straforini</td>
+                                                      <td>Francesca Falcioni</td>
+                                                      <td>Camilla Orlandini</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">3</th>
+                                                      <td>Le lunghe e la pacioccona</td>
+                                                      <td>Greta Galeati</td>
+                                                      <td>Sonia Capriglia</td>
+                                                      <td>Lisa Raimondi</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">4</th>
+                                                      <td>Le esteriori</td>
+                                                      <td>Sara Corradin</td>
+                                                      <td>Michela Alfieri</td>
+                                                      <td>Laura Zebi</td>
+                                                    </tr>
                                                 </tbody>
                                             </table>
                                         </div>
@@ -674,7 +813,7 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse707f" class="collapse" aria-labelledby="heading707f" data-parent="#accordionExample">
+                                <div id="collapse707f" class="collapse show" aria-labelledby="heading707f" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
@@ -753,7 +892,7 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse408f" class="collapse show" aria-labelledby="heading408f" data-parent="#accordionExample">
+                                <div id="collapse408f" class="collapse" aria-labelledby="heading408f" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
