--- a/app/iscrizioni16.html
+++ b/app/iscrizioni16.html
@@ -441,7 +441,7 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse1008" class="collapse show" aria-labelledby="heading1008" data-parent="#accordionExample">
+                                <div id="collapse1008" class="collapse" aria-labelledby="heading1008" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
@@ -458,43 +458,99 @@
                                                 <tbody>
                                                     <tr>
                                                       <th scope="row">1</th>
-                                                      <td></td>
-                                                      <td></td>
+                                                      <td>110</td>
+                                                      <td>Sex on the beach</td>
                                                       <td>Lorenzo Monti</td>
                                                       <td>Mattia Orioli</td>
                                                       <td>Lorenzo Perrone</td>
                                                     </tr>
                                                     <tr>
                                                       <th scope="row">2</th>
-                                                      <td></td>
-                                                      <td></td>
+                                                      <td>120</td>
+                                                      <td>Duroamorire</td>
                                                       <td>Lorenzo Tommasini</td>
                                                       <td>Matteo Accorsi</td>
                                                       <td>Samuele Odorici</td>
                                                     </tr>
                                                     <tr>
                                                       <th scope="row">3</th>
-                                                      <td></td>
-                                                      <td></td>
+                                                      <td>102</td>
+                                                      <td>Minno è vita</td>
                                                       <td>Giacomo Minniti</td>
                                                       <td>Luca Falzaresi</td>
                                                       <td>Giovanni Pascucci</td>
                                                     </tr>
                                                     <tr>
                                                       <th scope="row">4</th>
-                                                      <td></td>
-                                                      <td></td>
+                                                      <td>72</td>
+                                                      <td>Shqiptari 3.0</td>
                                                       <td>Mattia Bissi</td>
                                                       <td>Mattia Farina</td>
-                                                      <td>Niccolò Contu</td>
+                                                      <td>Mattia Mazzotti</td>
                                                     </tr>
                                                     <tr>
                                                       <th scope="row">5</th>
-                                                      <td></td>
-                                                      <td></td>
-                                                      <td>Matteo Ventisette</td>
-                                                      <td>Lorenzo Tuccelli</td>
+                                                      <td>110</td>
+                                                      <td>Team SdST</td>
+                                                      <td>Giovanni Santoni</td>
+                                                      <td>Ivan Farabegoli</td>
+                                                      <td>Lorenzo Foschini</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">6</th>
+                                                      <td>30</td>
+                                                      <td>Scarsi ma simpatici</td>
                                                       <td>Walter Fabbri</td>
+                                                      <td>Alberto Visani</td>
+                                                      <td>Lorenzo Della Casa</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">7</th>
+                                                      <td>40</td>
+                                                      <td>I cassoni</td>
+                                                      <td>Diego Frascio</td>
+                                                      <td>Matteo Ventisette</td>
+                                                      <td>Nicola Fucksia</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">8</th>
+                                                      <td>50</td>
+                                                      <td>Herta Vernello</td>
+                                                      <td>Nicolò Selleghini</td>
+                                                      <td>Nicolò Baldrati</td>
+                                                      <td>Cicognani Francesco</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">9</th>
+                                                      <td>0</td>
+                                                      <td>Succhi</td>
+                                                      <td>Manuel Vegliò</td>
+                                                      <td>Lorenzo Piomboni</td>
+                                                      <td>Francesco Mazza</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">10</th>
+                                                      <td>0</td>
+                                                      <td>Atletico manontroppo</td>
+                                                      <td>Federico Fornasiero</td>
+                                                      <td>Alessandro Aldini</td>
+                                                      <td>Riccardo Pretolani</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">11</th>
+                                                      <td>30</td>
+                                                      <td>Toki Sushi</td>
+                                                      <td>Federico Rossi</td>
+                                                      <td>Nicolò Zama</td>
+                                                      <td>Michele Moschini</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">12</th>
+                                                      <td>6</td>
+                                                      <td>Loser</td>
+                                                      <td>Glenn Ferrari</td>
+                                                      <td>Davide Bonoli</td>
+                                                      <td>Lorenzo Preda</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -512,7 +568,7 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse2408" class="collapse" aria-labelledby="heading2408" data-parent="#accordionExample">
+                                <div id="collapse2408" class="collapse show" aria-labelledby="heading2408" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
@@ -526,7 +582,62 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-
+                                                    <tr>
+                                                      <th scope="row">1</th>
+                                                      <td>185</td>
+                                                      <td>Sex on the beach</td>
+                                                      <td>Lorenzo Monti</td>
+                                                      <td>Mattia Orioli</td>
+                                                      <td>Lorenzo Perrone</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">2</th>
+                                                      <td>50</td>
+                                                      <td></td>
+                                                      <td>Manuel Vegliò</td>
+                                                      <td>Filippo Evangelisti</td>
+                                                      <td>Francesco Mazza</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">3</th>
+                                                      <td>40</td>
+                                                      <td></td>
+                                                      <td>Sebastiano Marrazzo</td>
+                                                      <td>Giovanni Santoni</td>
+                                                      <td>Tommaso Bertaccini</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">4</th>
+                                                      <td></td>
+                                                      <td></td>
+                                                      <td>Lorenzo Tommasini</td>
+                                                      <td>Giacomo Minniti</td>
+                                                      <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">5</th>
+                                                      <td>56</td>
+                                                      <td></td>
+                                                      <td>Filippo Mancini</td>
+                                                      <td>Luca Falzaresi</td>
+                                                      <td>Giovanni Pascucci</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">6</th>
+                                                      <td>104</td>
+                                                      <td>Shqiptari 4.0</td>
+                                                      <td>Mattia Bissi</td>
+                                                      <td>Mattia Farina</td>
+                                                      <td>Walter Fabbri</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">7</th>
+                                                      <td>26</td>
+                                                      <td>Albanian Boy</td>
+                                                      <td>Alberto Visani</td>
+                                                      <td>Lorenzo Della Casa</td>
+                                                      <td>Rei Canhasi</td>
+                                                    </tr>
                                                 </tbody>
                                             </table>
                                         </div>
